Update: Atividades corretas, profilepage correta, homepage correta.