@@ -18,6 +18,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.LocalTime; // <<< Adicionar para .atTime(LocalTime.MAX)
 import java.time.YearMonth;
 import java.util.Comparator;
 import java.util.List;
@@ -49,6 +50,7 @@ public class UserService {
         newUser.setName(registrationDto.getName());
         newUser.setEmail(email);
         newUser.setPassword(passwordEncoder.encode(registrationDto.getPassword()));
+        // createdAt é gerenciado por @PrePersist na entidade User
 
         User savedUser = userRepository.save(newUser);
         log.info("Novo usuário salvo com sucesso. ID: {}, Email: {}", savedUser.getId(), savedUser.getEmail());
@@ -59,6 +61,7 @@ public class UserService {
     public UserProfileDto getUserProfile(String userEmail) {
         log.debug("Buscando perfil para usuário: {}", userEmail);
         User user = findUserByEmailOrThrow(userEmail);
+        // Assume que UserMapper foi atualizado ou mapeia age, height, weight automaticamente se existirem
         UserProfileDto userProfileDto = userMapper.toUserProfileDto(user);
         log.debug("Perfil DTO criado para usuário: {}", userEmail);
         return userProfileDto;
@@ -69,21 +72,19 @@ public class UserService {
         log.info("Tentando atualizar perfil para usuário: {}", userEmail);
         User user = findUserByEmailOrThrow(userEmail);
 
-        // Atualiza os campos permitidos
         user.setName(updateDto.getName());
         log.debug("Campo 'name' atualizado para o usuário {}", userEmail);
 
-        // Atualiza outros campos se existirem no DTO e na Entidade
-        if (updateDto.getAge() != null) {
-            user.setAge(updateDto.getAge());
+        if (updateDto.getAge() != null) { // Assume que DTO tem getAge()
+            user.setAge(updateDto.getAge());   // Assume que Entidade tem setAge()
             log.debug("Campo 'age' atualizado para o usuário {}", userEmail);
         }
-        if (updateDto.getHeight() != null) {
-            user.setHeight(updateDto.getHeight());
+        if (updateDto.getHeight() != null) { // Assume que DTO tem getHeight()
+            user.setHeight(updateDto.getHeight()); // Assume que Entidade tem setHeight()
             log.debug("Campo 'height' atualizado para o usuário {}", userEmail);
         }
-        if (updateDto.getWeight() != null) {
-            user.setWeight(updateDto.getWeight());
+        if (updateDto.getWeight() != null) { // Assume que DTO tem getWeight()
+            user.setWeight(updateDto.getWeight()); // Assume que Entidade tem setWeight()
             log.debug("Campo 'weight' atualizado para o usuário {}", userEmail);
         }
 
@@ -97,26 +98,28 @@ public class UserService {
         log.info("Calculando estatísticas para usuário: {}", userEmail);
         User user = findUserByEmailOrThrow(userEmail);
 
-        // Calcula Total de Treinos
+        // Calcula Total de Treinos REGISTRADOS (não necessariamente concluídos)
         long totalWorkoutsRegistered = workoutSessionRepository.countByUser(user);
         log.debug("Total de treinos registrados para {}: {}", userEmail, totalWorkoutsRegistered);
 
-        // Calcula Treinos Concluídos no Mês Atual
-        YearMonth currentMonth = YearMonth.now();
-        LocalDate startOfMonth = currentMonth.atDay(1);
-        LocalDate endOfMonth = currentMonth.atEndOfMonth();
-        int workoutsThisMonthBasedOnSessionDate = workoutSessionRepository.countByUserAndSessionDateBetween(user, startOfMonth, endOfMonth);
-        log.warn("Calculando 'workoutsThisMonth' baseado em sessionDate. Ajustar para completedAt se necessário.");
-        log.debug("Treinos (base sessionDate) no mês {} para {}: {}", currentMonth, userEmail, workoutsThisMonthBasedOnSessionDate);
+        // Calcula Treinos CONCLUÍDOS no Mês Atual
+        YearMonth currentYMonth = YearMonth.now();
+        LocalDateTime startOfMonthDateTime = currentYMonth.atDay(1).atStartOfDay();
+        LocalDateTime endOfMonthDateTime = currentYMonth.atEndOfMonth().atTime(LocalTime.MAX); // Usa LocalTime.MAX para o fim do dia
 
-        // Calcula Streaks
+        // VVVVV CORREÇÃO DA CHAMADA E NOME DA VARIÁVEL VVVVV
+        int workoutsCompletedThisMonth = workoutSessionRepository.countByUserAndCompletedAtBetween(user, startOfMonthDateTime, endOfMonthDateTime);
+        log.debug("Treinos CONCLUÍDOS no mês {} para {}: {}", currentYMonth, userEmail, workoutsCompletedThisMonth);
+        // ^^^^^ CORREÇÃO DA CHAMADA E NOME DA VARIÁVEL ^^^^^
+
+        // Calcula Streaks baseado em treinos CONCLUÍDOS
         StreakInfo streakInfo = calculateStreaksBasedOnCompletion(user);
         log.debug("Streaks (baseado em conclusão) para {}: Atual={}, Recorde={}", userEmail, streakInfo.currentStreak(), streakInfo.recordStreak());
 
         // Constrói o DTO
         UserStatsDto statsDto = UserStatsDto.builder()
-                .workoutsTotal(totalWorkoutsRegistered)
-                .workoutsThisMonth(workoutsThisMonthBasedOnSessionDate)
+                .workoutsTotal(totalWorkoutsRegistered) // Mantém o total de treinos registrados
+                .workoutsThisMonth(workoutsCompletedThisMonth) // Agora reflete os treinos CONCLUÍDOS no mês
                 .currentStreak(streakInfo.currentStreak())
                 .recordStreak(streakInfo.recordStreak())
                 .build();
@@ -133,10 +136,11 @@ public class UserService {
                 });
     }
 
+    public record StreakInfo(int currentStreak, int recordStreak) {}
+
     StreakInfo calculateStreaksBasedOnCompletion(User user) {
         List<LocalDateTime> completedTimestamps = workoutSessionRepository.findCompletedAtTimestampsByUserOrderByCompletedAtDesc(user);
 
-        // Converte para DATAS distintas e ordena DESC
         List<LocalDate> distinctDates = completedTimestamps.stream()
                 .map(LocalDateTime::toLocalDate)
                 .distinct()
@@ -150,16 +154,14 @@ public class UserService {
             return new StreakInfo(0, 0);
         }
 
-        // Lógica de cálculo de current e record streak
         int calculatedCurrentStreak = 0;
         int calculatedRecordStreak = 0;
         LocalDate today = LocalDate.now();
         LocalDate yesterday = today.minusDays(1);
-        LocalDate mostRecentCompletionDate = distinctDates.get(0);
+        LocalDate mostRecentCompletionDate = distinctDates.getFirst();
 
         log.debug("[calculateStreaks] Hoje={}, Ontem={}, MaisRecenteConclusão={}", today, yesterday, mostRecentCompletionDate);
 
-        // Cálculo da Current Streak
         if (mostRecentCompletionDate.equals(today) || mostRecentCompletionDate.equals(yesterday)) {
             calculatedCurrentStreak = 1;
             log.debug("[calculateStreaks] Iniciando currentStreak = 1 (baseado em conclusão hoje/ontem)");
@@ -173,11 +175,9 @@ public class UserService {
                 }
             }
         } else {
-            calculatedCurrentStreak = 0;
             log.debug("[calculateStreaks] Conclusão mais recente não foi hoje nem ontem. currentStreak = 0");
         }
 
-        // Cálculo da Record Streak
         int maxStreakFound = 0;
         if (!distinctDates.isEmpty()) {
             int currentLoopStreak = 1;
@@ -198,8 +198,4 @@ public class UserService {
         log.debug("[calculateStreaks] Final (baseado em conclusão): current={}, record={}", calculatedCurrentStreak, calculatedRecordStreak);
         return new StreakInfo(calculatedCurrentStreak, calculatedRecordStreak);
     }
-
-    // Inner record auxiliar para streaks
-    record StreakInfo(int currentStreak, int recordStreak) {}
-
 }
